# Changelog

### [Unreleased]
* ADDED: Configure motors 
* ADDED: Basic functionality