@@ -16,4 +16,7 @@
     <a href="#" onclick="turnAPositive();">turnAPositive</a>
     <a href="#" onclick="turnANegative();">turnANegative</a>
   </body>
+  <script>
+    console.log('Is Web Bluetooth supported: ' + isWebBluetoothSupported);
+  </script>
 </html>
