@@ -4,6 +4,8 @@ const BOOST_CHARACTERISTIC_UUID = '00001624-1212-efde-1623-785feabcd123';
 export class BoostConnector {
   private static device: BluetoothDevice;
 
+  public static isWebBluetoothSupported : boolean =  navigator.bluetooth ? true : false;
+  
   public static async connect(disconnectCallback: () => Promise<void>): Promise<BluetoothRemoteGATTCharacteristic> {
     const options = {
       acceptAllDevices: false,
